force-app/main/default/objects/Student__c/fields/Friend_name__c.field-meta.xml
<CustomField>
    <fullName>Friend_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Friend name</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students (Friend name)</relationshipLabel>
    <relationshipName>Students1</relationshipName>
    <type>Lookup</type>
</CustomField>