force-app/main/default/objects/Student__c/fields/Present_age__c.field-meta.xml
<CustomField>
    <fullName>Present_age__c</fullName>
    <formula>(TODAY()- DOB__c)/365</formula>
    <label>Present age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>