force-app/main/default/objects/Student__c/fields/Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_No__c</fullName>
    <displayFormat>ID-{0000}</displayFormat>
    <label>Reg No</label>
    <type>AutoNumber</type>
</CustomField>