force-app/main/default/objects/Student__c/validationRules/Phone_number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Len(Phone_No__c)!=10</errorConditionFormula>
    <errorMessage>Invalid phone  number!!!</errorMessage>
</ValidationRule>